--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,7 +145,7 @@ header {
 /*-------------------------------------- FIN HEADER-----------------------------------*/
 
 
-/*-------------------------------------- INICIO MAIN-----------------------------------*/
+/*-------------------------------------- INICIO MAIN INDEX-----------------------------------*/
 .main-index h2 {
     font-size: 18px;
 }
@@ -197,6 +197,7 @@ header {
     background-color: white;
     margin: 10px;
     padding: 15px;
+    border-bottom: 1px solid grey;
 }
 
 .truck i {
@@ -225,7 +226,7 @@ header {
 }
 
 .prec-desc .descuento {
-    padding-left: 5px;
+    padding-left: 15px;
     width: 70%;
 
 }
@@ -245,7 +246,7 @@ header {
 
 /*-------------------------------------- FIN MAIN INDEX   -----------------------------------*/
 
-/*-------------------------------------- REGISTRO   -----------------------------------*/
+/*-------------------------------------- INICIO MAIN REGISTRO   -----------------------------------*/
 
 
 
@@ -254,10 +255,10 @@ header {
     margin-right: auto;
     margin: 20px;
     margin-left: auto;
-    padding: 5px;
-    width: 65%;
     margin-left: auto;
     margin-right: auto;
+    padding: 5px;
+    width: 65%;
 
 }
 
@@ -267,10 +268,11 @@ header {
     padding-top: 20px;
 
 }
-.form__nombre label{
+
+.form__nombre label {
+    font-weight: bold;
     margin-bottom: 10px;
     margin-left: 10px;
-    font-weight: bold;
     padding-bottom: 10px;
 
 }
@@ -292,7 +294,7 @@ header {
 
 .form__usuario {
     margin-bottom: 20px;
-   
+
 }
 
 .form__usuario input {
@@ -307,20 +309,20 @@ header {
     width: 85%;
 
 }
-.form__usuario label{
+
+.form__usuario label {
 
     font-weight: bold;
     margin-bottom: 10px;
     margin-left: 10px;
     padding-bottom: 10px;
 
-    
+
 
 }
 
-  .form__fecha input {
+.form__fecha input {
     border-radius: 7px;
-    
     border: none;
     color: #9a9a9a;
     display: block;
@@ -362,9 +364,10 @@ header {
     padding-bottom: 8px;
     padding-left: 5px;
     width: 85%;
-    
+
 }
-.form__domicilio label{
+
+.form__domicilio label {
 
     margin-bottom: 10px;
     margin-left: 10px;
@@ -384,9 +387,9 @@ header {
 }
 
 .form__perfil__title {
+    font-weight: bold;
     margin-bottom: 20px;
     margin-left: 10px;
-    font-weight: bold;
     padding-bottom: 20px;
 
 }
@@ -436,10 +439,10 @@ header {
 }
 
 .form__imagen input {
-margin-top: 10px;
+    margin-top: 10px;
 }
 
-.form__password input{
+.form__password input {
     border: none;
     border-radius: 7px;
     font-size: 15px;
@@ -451,17 +454,17 @@ margin-top: 10px;
     width: 85%;
 }
 
-.form__password__title{
+.form__password__title {
+    font-weight: bold;
     margin-bottom: 10px;
     margin-left: 10px;
-    font-weight: bold;
     padding-bottom: 10px;
 
 
 
 }
 
-.form__confirm input{
+.form__confirm input {
     border: none;
     border-radius: 7px;
     font-size: 15px;
@@ -474,81 +477,85 @@ margin-top: 10px;
 
 }
 
-.form__confirm__title{
+.form__confirm__title {
     font-weight: bold;
     margin-bottom: 10px;
     margin-left: 10px;
     padding-bottom: 10px;
- 
 
 
+
+
+}
+
+
+.form__button {
+
+    background-color: #1259c3;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 10px 20px;
 
 }
 
-
-.form__button{
-
-background-color: #1259c3;
-border: none;
-border-radius: 10px;
-color: white;
-padding: 10px 20px;
-
+.contenedor_button {
+    display: flex;
+    justify-content: space-around;
 }
-.contenedor_button{
-display: flex;
-justify-content: space-around;
-}
-.form-Reg input:hover{
 
+.form-Reg input:hover {
     box-shadow: 0 0 5px 0 #095484;
-
 }
-.form-Reg input{
+
+.form-Reg input {
     outline: none;
 }
 
-.form-Reg label:hover  {
+.form-Reg label:hover {
     color: #095484;
-    }
-
-    .form__button:hover {
-        background-color: #0666a3;
-        }
-        .form-Reg input[type="text"]:focus:required:valid{
-            border:2px solid green;
-        }
-        .form-Reg input[type="text"]:required:invalid{
-            border:2px solid red;
-            }
-
-.form-reg input[type="date"]:focus:required:valid{
-    border:2px solid green;
-   
-}
-.form-reg input[type="date"]:required:invalid{
-    border:2px solid red;
-    
 }
 
+.form__button:hover {
+    background-color: #0666a3;
+}
 
-            
+.form-Reg input[type="text"]:focus:required:valid {
+    border: 2px solid green;
+}
+
+.form-Reg input[type="text"]:required:invalid {
+    border: 2px solid red;
+}
+
+.form-reg input[type="date"]:focus:required:valid {
+    border: 2px solid green;
+
+}
+
+.form-reg input[type="date"]:required:invalid {
+    border: 2px solid red;
+
+}
 
 
 
 
-/*---------------------------------------------------REGISTRO-------------------------------------------*/
 
 
-/*---------------------------------------------------LOGIN-------------------------------------------*/
+
+/*---------------------------------------------------FIN MAINREGISTRO-------------------------------------------*/
+
+
+/*---------------------------------------------------INICIO MAIN LOGIN-------------------------------------------*/
 
 .button-login {
     background-color: #1259c3;
     border-radius: 5px;
+    color: white;
     margin-bottom: 50px;
     margin-top: 30px;
-    max-width: 600px;
-    color: white;
+    max-width: 300px;
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
@@ -576,49 +583,52 @@ justify-content: space-around;
 
 .usuario__nombre input {
     border: none;
-    border-radius: 5px ;
+    border-radius: 5px;
     margin: 20px;
-    max-width: 600px;
+    max-width: 300px;
     margin-top: 30px;
     padding: 5px;
     width: 90%;
-    
+
 }
 
 .usuario__pass input {
     border: none;
     border-radius: 5px;
     margin: 20px;
-    max-width: 600px;
+    max-width: 300px;
     padding: 5px;
     width: 90%;
-    
+
 }
-.form-login input:hover{
+
+.form-login input:hover {
 
     box-shadow: 0 0 5px 0 #095484;
 
 }
-.form-login input{
+
+.form-login input {
     outline: none;
 }
 
-.form-login label:hover  {
+.form-login label:hover {
     color: #095484;
-    }
-
-    .button-login:hover {
-        background-color: #0666a3;
-        }       
-
-        .form-login input[type="text"]:focus:required:valid{
-            border:2px solid green;
-        }
-        .form-login input[type="text"]:required:invalid{
-            border:2px solid red;
 }
 
-/*---------------------------------------------------LOGIN-------------------------------------------*/
+.button-login:hover {
+    background-color: #0666a3;
+}
+
+.form-login input[type="text"]:focus:required:valid {
+    border: 2px solid green;
+}
+
+.form-login input[type="text"]:required:invalid {
+    border: 2px solid red;
+}
+
+/*---------------------------------------------------FIN MAIN LOGIN-------------------------------------------*/
 
 
 
@@ -639,7 +649,7 @@ footer {
     text-align: center;
 }
 
-.section-paga__p{
+.section-paga__p {
     color: #666;
     margin-bottom: 50px;
     margin-left: 1px;
@@ -789,6 +799,11 @@ footer {
         width: 44%;
     }
 
+
+
+
+
+
 }
 
 /*-------------------------------------- FIN MEDIA QUERI 768 992-----------------------------------*/
@@ -817,8 +832,19 @@ footer {
         width: 22%;
     }
 
+.section-product{
+
+    border-bottom: solid 1px grey;
+}
+.main-index article{
+    border-bottom: none;
 }
 
 
 
-/*-------------------------------------- FIN MEDIA QUERI 1200 INFINITO-----------------------------------*/
+
+}
+
+
+
+/*-------------------------------------- FIN MEDIA QUERI 992 INFINITO-----------------------------------*/
