--- a/views/home.html
+++ b/views/home.html
@@ -52,7 +52,8 @@
 
             <ul class="lista-superior">
 
-                <li><a href="/registro">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span> </a>
+                <li><a href="/registro">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span>
+                    </a>
                 </li>
                 <li><a href="/login">Ingresá<span class="iconMenu"><i
                                 class="fa-solid fa-arrow-right-to-bracket"></i></span></a></li>
@@ -157,11 +158,10 @@
                     <div class="prec-desc">
                         <p class="precio">$6770</p>
                         <p class="descuento">40% OFF</p>
-
                     </div>
-
-
-                    <h3>Cafetera Moulinex</h3>
+                    <div>
+                        <h3 >Cafetera Moulinex</h3>
+                    </div>
                 </article>
                 <article class="product">
                     <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
@@ -219,14 +219,14 @@
         </section>
         <section>
             <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
-            <h2 >Envío gratis desde $ 2.500</h2>
-            <p class="section-paga__p" >Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            <h2>Envío gratis desde $ 2.500</h2>
+            <p class="section-paga__p">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
         <section>
             <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
             <h2>Seguridad, de principio a fin</h2>
-            <p class="section-paga__p" >¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            <p class="section-paga__p">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
         <br>
