--- a/views/login.html
+++ b/views/login.html
@@ -104,25 +104,28 @@
 
     </main>
     <footer class="footer">
-        <section class="section-paga">
-            <div class="iconFooter"><i class="fa-solid fa-credit-card"></i></div>
-            <h2>Pagá con tarjeta o en efectivo </i></h2>
-            <p class="section-paga__p">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
-        <section>
-            <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
-            <h2 >Envío gratis desde $ 2.500</h2>
-            <p class="section-paga__p" >Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-        <section>
-            <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
-            <h2>Seguridad, de principio a fin</h2>
-            <p class="section-paga__p" >¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
-        </section>
-        <br>
+        <div class="cont-footer">
+            <section class="section-paga">
+                <div class="iconFooter"><i class="fa-solid fa-credit-card"></i></div>
+                <h2>Pagá con tarjeta o en efectivo </i></h2>
+                <p class="section-paga__p">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </section>
+            <section class="section-envio">
+                <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
+                <h2>Envío gratis desde $ 2.500</h2>
+                <p class="section-paga__p">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </section>
+            <section class="section-seg">
+                <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
+                <h2>Seguridad, de principio a fin</h2>
+                <p class="section-paga__p">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+            </section>
+            <br>
+        </div>
+        
         <section>
 
             <p class="section-paga__p" class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
