--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -516,7 +516,7 @@ header {
     border-radius: 10px;
     color: white;
     padding: 10px 20px;
-    transition: all 0.3s;
+    transition: all 0.8s;
 }
 
 .contenedor_button {
@@ -581,7 +581,7 @@ header {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
-    transition: all 0.4s;
+    transition: all 0.8s;
     width: 90%;
 
 
@@ -600,10 +600,17 @@ header {
 
 .section-login {
     background-color: #ebebeb;
-    margin-top: 0px;
+    margin-top: 16px;
     margin-bottom: 20px;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
 }
+.section-login:hover{
+    box-shadow: 1px 1px 15px grey;
+}
+
+
 
 .usuario__nombre input {
     border: none;
@@ -810,6 +817,8 @@ footer {
         font-size: 25px;
         margin-top: auto;
         margin-left: 0px;
+        margin-bottom: 25px;
+        margin-right: 10px;
         padding-left: 0px;
         text-align: right;
 
@@ -881,6 +890,8 @@ footer {
 
     .compra {
         padding-left: 0%;
+        margin-left: 30px;
+        margin-right: 30px;
         width: 50%;
     }
 
@@ -905,10 +916,11 @@ footer {
         
         
     }
+   
 
     .product:hover h3 {
         display: block;
-        transition: all 5s;
+    
 
         /*opacity: 1; esta opcion es haciendolo transparente*/
     }
