--- a/views/register.html
+++ b/views/register.html
@@ -196,13 +196,13 @@
                 <p class="section-paga__p">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
             </section>
-            <section>
+            <section class="section-envio">
                 <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
                 <h2>Envío gratis desde $ 2.500</h2>
                 <p class="section-paga__p">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                     productos. Es un beneficio de Mercado Puntos.</p>
             </section>
-            <section>
+            <section class="section-seg">
                 <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
                 <h2>Seguridad, de principio a fin</h2>
                 <p class="section-paga__p">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
@@ -217,6 +217,7 @@
         </section>
 
     </footer>
+
 
 
 
