--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,22 +1,27 @@
-/* Paleta de colores
-Amarillo: #EAC926;
-Azul: #03264C;
-Celeste: #1259c3;
-Gris oscuro: #666;
-Gris claro: #ebebeb;
-Verde: #39b54a;
+:root{
 
-● Tipografías
-Familia: 'Roboto'
-Nos envían esta demo de cómo cargar fuentes de Google Fonts. Además
+
+
+/* Paleta de colores */
+--Amarillo: #EAC926;
+--Azul: #03264C;
+--Celeste: #1259c3;
+--Gris-oscuro: #666;
+--Gris-claro: #ebebeb;
+--Verde: #39b54a;
+
+/* ● Tipografías
+Familia: 'Roboto' */
+/* Nos envían esta demo de cómo cargar fuentes de Google Fonts. Además
 podemos consultar el siguiente recurso aquí, para más detalle.
 ● Tamaños Tipográficos
 Cuerpos de texto: 12px
 Titulares (Basado en tu última visita/Ofertas): 24px
 Precios: 18px
 Descuentos: 16px
-Descripciones: 16px  */
+Descripciones: 16px  */ 
 
+}
 
 
 * {
@@ -24,7 +29,9 @@ Descripciones: 16px  */
     margin: 0px;
     padding: 0px;
 }
-
+body{
+min-width: 360px;
+}
 body nav {
     display: none;
 }
@@ -49,12 +56,58 @@ header {
     padding: 10px;
 }
 
-.imgMercado {
-    padding-top: 20px;
-    padding-left: 15px;
+
+.top-bar {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
+
+.top-bar__img {
+    padding-right: 10px;
     width: 50%;
 }
 
+.top-bar__img img {
+    padding-right: 10px;
+    width: 170px;
+}
+
+.top-bar__form {
+    display: flex;
+    width: 50%;
+}
+
+.top-bar__form input {
+    border: none;
+    color: #666;
+    padding: 10px;
+    width: 100%;
+
+}
+
+.top-bar__form button {
+    background-color: white;
+    border: none;
+    display: flex;
+    justify-content: space-evenly;
+    width: 50px;
+}
+
+.top-bar__text {
+   text-align: center;
+   padding: 10px;
+    width: 100%;
+}
+
+.main-nav ul {
+    list-style: none;
+    margin: 10px;
+    padding: 0;
+
+}
 .burguer i {
     background-color: #1259c3;
     border-radius: 8px;
@@ -69,12 +122,7 @@ header {
 }
 
 
-.main-nav ul {
-    list-style: none;
-    margin: 10px;
-    padding: 0;
 
-}
 
 .main-nav a {
     color: black;
@@ -91,53 +139,13 @@ header {
     display: flex;
     margin-bottom: 0px;
     padding: 3px;
-}
 
-
-
-
-#fname {
-    color: #666;
-    border: white solid 1px;
-}
-
-.formulario {
-    display: flex;
-    font-size: 17px;
-    margin-right: 10px;
-    margin-bottom: -29px;
-    padding: 25px;
-    width: 50%;
-}
-
-#fname {
-    display: flex;
-    padding-right: 0px;
-    width: 100%;
-
-
-}
-
-.compra {
-    font-weight: normal;
-    font-size: 15px;
-    margin-top: 0px;
-    margin-left: 25px;
-    margin-top: auto;
-    padding: 1px;
-}
-
-.img-form {
-    display: flex;
-    flex: wrap;
-    margin-bottom: 30px;
-    margin-top: -10px;
-    width: 100%;
 }
 
 .iconMenu {
     color: black;
     margin: 3px;
+    margin-left: 10px;
 }
 
 
@@ -191,6 +199,7 @@ header {
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 20px;
+    margin-top: -5px;
     width: 100%;
 
 }
@@ -205,17 +214,19 @@ header {
     border-top: 1px solid #ebebeb;
     background-color: white;
     margin: 10px;
+    margin-bottom: 35px;
     padding: 15px;
-    border-bottom: 1px solid grey;
-    
-    
+  
+
+
 }
 
-.main-index article:hover .truck i{
-   transition: 2s;
+.main-index article:hover .truck i {
+    transition: 2s;
     transform: rotatez(-90deg);
 }
-.main-index article:hover{
+
+.main-index article:hover {
     box-shadow: 1px 1px 15px grey;
 }
 
@@ -225,7 +236,7 @@ header {
     border-radius: 50ch;
     color: #39b54a;
     padding: 15px;
-    
+
 
 }
 
@@ -272,12 +283,12 @@ header {
 
 .form-Reg {
     background-color: #ebebeb;
-    margin-right: auto;
-    margin: 20px;
-    margin-left: auto;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
     padding: 5px;
+    max-width: 450px;
     width: 65%;
 
 }
@@ -515,6 +526,7 @@ header {
     border: none;
     border-radius: 10px;
     color: white;
+    margin-bottom: 15px;
     padding: 10px 20px;
     transition: all 0.8s;
 }
@@ -537,7 +549,7 @@ header {
 }
 
 .form__button:hover {
-    background-color: #0666a3;
+    background-color: #0022AA;
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
 }
@@ -606,7 +618,8 @@ header {
     margin-right: auto;
     width: 400px;
 }
-.section-login:hover{
+
+.section-login:hover {
     box-shadow: 1px 1px 15px grey;
 }
 
@@ -707,25 +720,31 @@ footer {
     padding-left: 1px;
     text-align: left;
 }
-.section-paga .iconFooter i{
+
+.section-paga .iconFooter i {
     transition: all 0.8s;
 }
-.section-paga:hover .iconFooter i{
+
+.section-paga:hover .iconFooter i {
     color: #39b54a;
     transform: scale(1.2);
 }
-.section-envio .iconFooter i{
+
+.section-envio .iconFooter i {
     transition: all 0.8s;
 }
-.section-envio:hover .iconFooter i{
+
+.section-envio:hover .iconFooter i {
     color: #39b54a;
     transform: scale(1.2);
 }
-.section-seg .iconFooter i{
+
+.section-seg .iconFooter i {
     transition: all 0.8s;
 }
-.section-seg:hover .iconFooter i{
-   color: #39b54a;
+
+.section-seg:hover .iconFooter i {
+    color: #39b54a;
     transform: scale(1.2);
 }
 
@@ -765,10 +784,6 @@ footer {
 
     @media(min-width: 576px) {
 
-        .compra {
-
-            text-align: center;
-        }
 
         .main-nav {
 
@@ -796,38 +811,23 @@ footer {
 
 @media(min-width: 769px) {
 
+    .top-bar__img img{
 
-
-
-    .imgMercado {
-        width: 180px;
+        width: 187px;
+    }
+    .top-bar__img{
+        width: 25%;
+    }
+    .top-bar__form{
+        width: 40%;
+    }
+    .top-bar__text{
+        text-align: left;
+        width: 35%;
     }
 
 
 
-    .top-bar {
-        display: flex;
-        justify-content: space-between;
-
-    }
-
-    .compra {
-
-
-        font-size: 25px;
-        margin-top: auto;
-        margin-left: 0px;
-        margin-bottom: 25px;
-        margin-right: 10px;
-        padding-left: 0px;
-        text-align: right;
-
-    }
-
-    .top-bar h2 {
-        margin-left: -150px;
-        padding-left: 0px;
-    }
 
 
     .main-nav {
@@ -860,12 +860,12 @@ footer {
         width: 44%;
     }
 
-    .cont-footer{
+    .cont-footer {
         display: flex;
-    
-    
+
+
     }
-    
+
 
 
 
@@ -876,10 +876,14 @@ footer {
 
 /*-------------------------------------- INICIO MEDIA QUERI 992 INFINITO-----------------------------------*/
 @media (min-width: 992px) {
+.top-bar__text{
+    text-align: center;
+}
+.top-bar__img img{
 
-
+    width: 240px;
+}
     .main-nav {
-        max-width: 1200px;
 
         margin: auto;
     }
@@ -887,13 +891,9 @@ footer {
     .main-nav li {
         font-size: 19px;
     }
-
-    .compra {
-        padding-left: 0%;
-        margin-left: 30px;
-        margin-right: 30px;
-        width: 50%;
-    }
+.lista-superior li{
+    margin-right: 25px;
+}
 
 
     .product {
@@ -901,33 +901,33 @@ footer {
 
     }
 
-    .section-product {
-
-        border-bottom: solid 1px grey;
-    }
+    
 
     .main-index article {
         border-bottom: none;
-        
+
     }
 
-    .product h3{
+    .product h3 {
         display: none;
-        
-        
+
+
     }
-   
+
 
     .product:hover h3 {
         display: block;
-    
+
 
         /*opacity: 1; esta opcion es haciendolo transparente*/
     }
 
 
+
+
+
+
+
 }
 
-
-
-/*-------------------------------------- FIN MEDIA QUERI 992 INFINITO-----------------------------------*/
+    /*-------------------------------------- FIN MEDIA QUERI 992 INFINITO-----------------------------------*/
