--- a/views/login.html
+++ b/views/login.html
@@ -12,38 +12,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/normalize.css">
-    <title>Bienvenidos a Mercado Liebre</title>
+    <title>Mercado Liebre</title>
 </head>
 
 <body>
     <header class="main-header">
-        <div class="top-bar">
 
-            <div class="img-form">
-                <img src="img/logo-mercado-liebre.svg" alt="logo mercado liebre" class="imgMercado">
-
-                <form class="formulario" action="/action_page.php" method="GET">
-                    <label for="fname"></label>
-                    <input type="text" id="fname" name="fname" value="Buscar productos, marcas">
-                    <button type="submit" class="lupa"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    <br>
-                </form>
-
+        <section class="top-bar">
+            <div class="top-bar__img">
+                <a href="/">
+                    <img  src="img/logo-mercado-liebre.svg" alt="logo mercado liebre">
+                </a>
 
             </div>
 
-            <h2 class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>
-                Comprá en cuotas y sin tarjeta de credito
-            </h2>
 
-        </div>
+            <form class="top-bar__form" action="#" method="POST">
+
+                <input type="text" id="fname" name="fname" value="Buscar productos, marcas">
+
+                <button type="submit" class="lupa">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+
+                </button>
+                
+            </form>
+
+
+            <P class="top-bar__text">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                Comprá en cuotas y sin tarjeta de credito
+            </P>
+
+        </section>
 
 
         <nav class="main-nav">
             <ul class="lista-superior">
 
 
-                <li class="ofertas"><a href="#">Ofertas</a></li>
+                <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
@@ -52,11 +60,12 @@
 
             <ul class="lista-superior">
 
-                <li><a href="/registro">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span> </a>
+                <li><a href="/registro">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span>
+                    </a>
                 </li>
                 <li><a href="/login">Ingresá<span class="iconMenu"><i
                                 class="fa-solid fa-arrow-right-to-bracket"></i></span></a></li>
-                <li><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a>
+                <li class="last-li"><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a>
                 </li>
 
             </ul>
