--- a/views/register.html
+++ b/views/register.html
@@ -12,65 +12,73 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/normalize.css">
-    <title>Registratre en Mercado Liebre</title>
+    <title>Mercado Liebre</title>
 </head>
 
+<body>
+    <header class="main-header">
+
+        <section class="top-bar">
+            <div class="top-bar__img">
+                <a href="/">
+                    <img  src="img/logo-mercado-liebre.svg" alt="logo mercado liebre">
+                </a>
+
+            </div>
 
 
-<header class="main-header">
-    <div class="top-bar">
+            <form class="top-bar__form" action="#" method="POST">
 
-        <div class="img-form">
-            <img src="img/logo-mercado-liebre.svg" alt="logo mercado liebre" class="imgMercado">
-
-            <form class="formulario" action="/action_page.php" method="GET">
-                <label for="fname"></label>
                 <input type="text" id="fname" name="fname" value="Buscar productos, marcas">
-                <button type="submit" class="lupa"><i class="fa-solid fa-magnifying-glass"></i></button>
-                <br>
+
+                <button type="submit" class="lupa">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+
+                </button>
+                
             </form>
 
 
-        </div>
+            <P class="top-bar__text">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                Comprá en cuotas y sin tarjeta de credito
+            </P>
 
-        <h2 class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>
-            Comprá en cuotas y sin tarjeta de credito
-        </h2>
-
-    </div>
-
-
-    <nav class="main-nav">
-        <ul class="lista-superior">
+        </section>
 
 
-            <li class="ofertas"><a href="#">Ofertas</a></li>
-            <li><a href="#">Tiendas oficiales</a></li>
-            <li><a href="#">Vender</a></li>
-            <li><a href="#">Ayuda</a></li>
-
-        </ul>
-
-        <ul class="lista-superior">
-
-            <li><a href="/registro">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span> </a>
-            </li>
-            <li><a href="/login">Ingresá<span class="iconMenu"><i
-                            class="fa-solid fa-arrow-right-to-bracket"></i></span></a></li>
-            <li><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a>
-            </li>
-
-        </ul>
+        <nav class="main-nav">
+            <ul class="lista-superior">
 
 
-    </nav>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
 
-    <a href="#" class="burguer">
-        <i class="fa-solid fa-bars"></i>
+            </ul>
 
-    </a>
+            <ul class="lista-superior">
 
-</header>
+                <li><a href="/registro">Creá tu cuenta<span class="iconMenu"><i class="fa-solid fa-id-card"></i></span>
+                    </a>
+                </li>
+                <li><a href="/login">Ingresá<span class="iconMenu"><i
+                                class="fa-solid fa-arrow-right-to-bracket"></i></span></a></li>
+                <li class="last-li"><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a>
+                </li>
+
+            </ul>
+
+
+        </nav>
+
+        <a href="#" class="burguer">
+            <i class="fa-solid fa-bars"></i>
+
+        </a>
+
+    </header>
 
 
 <body class="body-register">
@@ -171,7 +179,7 @@
                 </label>
             </div>
             <div class="contenedor_button">
-                <button class="form__button" type="submit">Borrar</button>
+                <button class="form__button" type="reset">Borrar</button>
                 <button class="form__button" type="submit">Enviar</button>
 
             </div>
